--- a/hack-ideas/src/app/app.component.html
+++ b/hack-ideas/src/app/app.component.html
@@ -1,2 +1,12 @@
-<router-outlet #o="outlet"></router-outlet>
-<router-outlet name="popup"></router-outlet>
+<div class="main-page">
+  <app-primary-header></app-primary-header>
+  <div class="router-container">
+    <div class="outlet-container">
+      <router-outlet #o="outlet"></router-outlet>
+    </div>
+    <div class="popup-container">
+      <router-outlet name="popup"></router-outlet>
+    </div>
+  </div>
+  <app-primary-footer></app-primary-footer>
+</div>
