--- a/hack-ideas/src/app/components/primary-footer/primary-footer.component.html
+++ b/hack-ideas/src/app/components/primary-footer/primary-footer.component.html
@@ -1,1 +1,13 @@
-<p>primary-footer works!</p>
+<footer>
+  <ul class="footer-container">
+    <li class="footer-item">
+      <a class="footer-link" href="https://twitter.com/hackerrank" target="_blank"> Twitter </a>
+    </li>
+    <li class="footer-item">
+      <a class="footer-link" href="https://www.facebook.com/hackerrank/" target="_blank"> Facebook </a>
+    </li>
+    <li class="footer-item">
+      <a class="footer-link" href="https://www.linkedin.com/company/hackerrank/" target="_blank"> LinkedIn </a>
+    </li>
+  </ul>
+</footer>
