--- a/hack-ideas/src/app/components/primary-header/primary-header.component.html
+++ b/hack-ideas/src/app/components/primary-header/primary-header.component.html
@@ -1,1 +1,11 @@
-<p>primary-header works!</p>
+<header>
+  <ul class="header-container">
+    <li class="header-item">
+      LOGO
+    </li>
+    <li>
+      Logout
+    </li>
+  </ul>
+</header>
+
