login form, Adding guards, util service, grid set up with data and sort , upvote, add challenge integrated

--- a/hack-ideas/src/app/components/primary-header/primary-header.component.html
+++ b/hack-ideas/src/app/components/primary-header/primary-header.component.html
@@ -3,7 +3,7 @@
     <li class="header-item">
       LOGO
     </li>
-    <li>
+    <li *ngIf="isLoggedInStatus" (click)="logOut()">
       Logout
     </li>
   </ul>
