--- a/hack-ideas/src/app/main/login/login.component.html
+++ b/hack-ideas/src/app/main/login/login.component.html
@@ -1,1 +1,13 @@
-<p>login works!</p>
+<div class="form-container">
+  <form [formGroup]="loginForm">
+    <!--<img [src]="logoPath"/>-->
+    <div class="form-control-container">
+      <p class="form-label">Employee ID:</p>
+      <input formControlName="employeeId" type="password" autocomplete="off"/>
+    </div>
+    <div class="form-footer">
+      <p class="empty"></p>
+      <button class="primary-btn" type="button" (click)="login()"> SIGN IN</button>
+    </div>
+  </form>
+</div>
