--- a/hack-ideas/src/assets/theme/variables.scss
+++ b/hack-ideas/src/assets/theme/variables.scss
@@ -1,2 +1,8 @@
 $hi-font-color: #9234eb;
 $hi-white: #ffffff;
+$hi-yellow: #eaa410;
+$hi-black: #222221;
+$hi-color-pale-grey: #f3f6f9;
+$hi-color-dark-grey: #eaeef3;
+$hi-light-yellow: #f6d57c;
+$hi-grey: #6b7474;
