--- a/hack-ideas/src/app/components/primary-header/primary-header.component.html
+++ b/hack-ideas/src/app/components/primary-header/primary-header.component.html
@@ -3,7 +3,7 @@
     <li class="header-item">
       LOGO
     </li>
-    <li *ngIf="isLoggedInStatus" (click)="logOut()">
+    <li class="header-item" *ngIf="isLoggedInStatus" (click)="logOut()">
       Logout
     </li>
   </ul>
