--- a/hack-ideas/src/app/main/login/login.component.html
+++ b/hack-ideas/src/app/main/login/login.component.html
@@ -1,13 +1,17 @@
-<div class="form-container">
-  <form [formGroup]="loginForm">
-    <!--<img [src]="logoPath"/>-->
-    <div class="form-control-container">
-      <p class="form-label">Employee ID:</p>
-      <input formControlName="employeeId" type="password" autocomplete="off"/>
-    </div>
-    <div class="form-footer">
-      <p class="empty"></p>
-      <button class="primary-btn" type="button" (click)="login()"> SIGN IN</button>
-    </div>
-  </form>
+<div class="login-container">
+  <div class="text-container">
+    <p> Login to check out the latest challenges!</p>
+  </div>
+  <div class="form-container">
+    <form [formGroup]="loginForm">
+      <!--<img [src]="logoPath"/>-->
+      <div class="input-container">
+        <input placeholder="Employee ID" formControlName="employeeId" type="password" autocomplete="off"/>
+      </div>
+
+      <div class="form-footer">
+        <button class="primary-btn" type="button" (click)="login()"> SIGN IN</button>
+      </div>
+    </form>
+  </div>
 </div>
