--- a/hack-ideas/src/app/modals/add-challenge/add-challenge.component.scss
+++ b/hack-ideas/src/app/modals/add-challenge/add-challenge.component.scss
@@ -15,16 +15,78 @@
   justify-content: center;
   align-items: center;
   box-sizing: border-box;
-  background-color: rgba(208, 208, 208, 0.75);
+  background-color: rgba(246, 213, 124, 0.75);
   @include main-desktop() {
     padding-top: 15px;
   }
 }
 
-.form-container {
+.add-challenge-container {
+  height: 60%;
   display: flex;
-  height: 100%;
-  width: 100%;
-  justify-content: center;
+  padding: 10px;
   align-items: center;
+
+  .text-container {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    background: $hi-black;
+    color: white;
+    padding: 60px;
+    font-size: 24px;
+    border-radius: 10px 0 0 10px;
+  }
+
+  .form-container {
+    flex-basis: 50%;
+    height: 100%;
+    background: white;
+    padding: 60px;
+    border-radius: 0 10px 10px 0;
+
+    form {
+
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      height: 100%;
+
+      .form-control-container {
+        padding-bottom: 20px;
+
+        input {
+          width: 100%;
+          height: 35px;
+          outline: none;
+          border: none;
+          border-bottom: 1px solid $hi-grey;
+          font-size: 16px;
+          background: white;
+        }
+
+        textarea {
+          width: 100%;
+          height: 100px;
+          padding: 0;
+        }
+
+        select {
+          width: 100%;
+          height: 35px;
+        }
+      }
+
+      .form-footer {
+        display: flex;
+
+        button {
+          flex-basis: 50%;
+          @include primary_button();
+        }
+      }
+    }
+  }
+
 }
+
