guard checks, footer changes, adding images/logo

--- a/hack-ideas/src/app/components/primary-header/primary-header.component.html
+++ b/hack-ideas/src/app/components/primary-header/primary-header.component.html
@@ -1,9 +1,9 @@
 <header>
   <ul class="header-container">
-    <li class="header-item">
-      LOGO
+    <li class="header-item logo">
+      HACK<i>IDEAS</i>
     </li>
-    <li class="header-item" *ngIf="isLoggedInStatus" (click)="logOut()">
+    <li class="header-item " *ngIf="isLoggedInStatus" (click)="logOut()">
       Logout
     </li>
   </ul>
