--- a/hack-ideas/src/app/components/primary-footer/primary-footer.component.scss
+++ b/hack-ideas/src/app/components/primary-footer/primary-footer.component.scss
@@ -28,6 +28,17 @@ footer {
       .footer-item {
         flex-basis: 100px;
         padding: 5px;
+
+        a {
+          text-decoration: none;
+          font-weight: bold;
+          font-size: 18px;
+          color: $hi-black;
+
+          &:hover {
+            color: $hi-yellow;
+          }
+        }
       }
     }
   }
