--- a/hack-ideas/src/app/modals/add-challenge/add-challenge.component.scss
+++ b/hack-ideas/src/app/modals/add-challenge/add-challenge.component.scss
@@ -78,6 +78,11 @@
         }
       }
 
+      .error {
+        padding-top: 10px;
+        font-style: italic;
+        color: $hi-error;
+      }
       .form-footer {
         display: flex;
 
