--- a/hack-ideas/src/app/main/login/login.component.scss
+++ b/hack-ideas/src/app/main/login/login.component.scss
@@ -53,6 +53,12 @@
           font-size: 16px;
           background: white;
         }
+
+        .error {
+          padding-top: 10px;
+          font-style: italic;
+          color: $hi-error;
+        }
       }
 
       .form-footer {
