--- a/hack-ideas/src/app/main/login/login.component.scss
+++ b/hack-ideas/src/app/main/login/login.component.scss
@@ -42,11 +42,16 @@
       justify-content: center;
       height: 100%;
 
+      img {
+        height: 50px;
+        object-fit: contain;
+      }
       .input-container {
         padding-bottom: 20px;
 
         input {
           height: 35px;
+          width: 100%;
           outline: none;
           border: none;
           border-bottom: 1px solid $hi-grey;
@@ -62,6 +67,8 @@
       }
 
       .form-footer {
+        display: flex;
+        justify-content: center;
         button {
           @include primary_button();
         }
