--- a/hack-ideas/src/app/main/login/login.component.html
+++ b/hack-ideas/src/app/main/login/login.component.html
@@ -4,7 +4,7 @@
   </div>
   <div class="form-container">
     <form [formGroup]="loginForm">
-      <!--<img [src]="logoPath"/>-->
+      <img [src]="logoPath"/>
       <div class="input-container">
         <input placeholder="Employee ID" formControlName="employeeId" type="password" autocomplete="off"/>
         <p class="error" *ngIf="errorMessage">{{errorMessage}}</p>
