Material icons integration

--- a/hack-ideas/src/app/components/primary-header/primary-header.component.html
+++ b/hack-ideas/src/app/components/primary-header/primary-header.component.html
@@ -3,8 +3,9 @@
     <li class="header-item logo">
       HACK<i>IDEAS</i>
     </li>
-    <li class="header-item " *ngIf="isLoggedInStatus" (click)="logOut()">
-      Logout
+    <li class="header-item " *ngIf="isLoggedInStatus">
+      Welcome, {{employeeName}}!
+      <p (click)="logOut()">Logout</p>
     </li>
   </ul>
 </header>
